--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no minimum-scale=1,maximum-scale=1">
     <meta name="theme-color" content="#131517">
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com/" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 
     <title>Blackur React</title>
 </head>
 <body>
-<noscript>
-    You need to enable JavaScript to run this app.
-</noscript>
-<div id="app"></div>
+<div id="app">
+    <noscript>
+        You need to enable JavaScript to run this app.
+    </noscript>
+</div>
 
 </body>
 </html>
