--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 
     <title>Blackur React</title>
+
+    <style>
+        @font-face {
+            font-family: 'Graphik'; 
+            src: url('fonts/Graphik-Bold.otf');
+            font-weight: 700;
+        }
+        @font-face {
+            font-family: 'Graphik'; 
+            src: 
+            url('fonts/Graphik-Medium.otf');
+            font-weight: 600;;
+        }
+        @font-face {
+            font-family: 'Graphik'; 
+            src: url('fonts/Graphik-Regular.otf');
+            font-weight: 500;
+        }
+        #app {
+            font-family: Graphik !important;
+        }
+    </style>
 </head>
 <body>
 <div id="app">
@@ -18,6 +40,6 @@
 
 </body>
 </html>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
