--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,5 @@
 </body>
 </html>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon_16.ico">
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="favicon_16.ico">
