--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,4 @@
 </html>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
     <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="./favicon_16.ico">
+    <link rel="shortcut icon" href="./favicon.ico">
