--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no minimum-scale=1, maximum-scale=1">
     
-    <title>Blackur. Digital code studio.</title>
+    <title>Blackur. Digital code studio</title>
 
     <meta property="og:title" content="Blackur. Digital code studio." />
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://www.blackur.com/" />
     <meta property="og:site_name" content="Blackur" />
-    <meta property="og:image" content="./images/site_picture.jpg" />
+    <meta property="og:image" content="./images/fb_thumb_main.png" />
     <meta property="og:og:description " content="Blackur is a Digital Code Studio with distinctive approach to work. We take up the most complex and challenging projects because we know how to make them work simple & extra effective." />
     <meta name="theme-color" content="#131517">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/" crossorigin>
