--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     
     <title>Blackur. Digital code studio</title>
 
-    <meta property="og:title" content="Blackur. Digital code studio." />
+    <meta property="og:title" content="Blackur — Digital code studio" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://www.blackur.com/" />
     <meta property="og:site_name" content="Blackur" />
